Update hover / active state
This will make the interaction a little better. When you hover over a tile, it gets a little darker and when you click it it gets really dark

--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,11 @@ h1 {
 }
 
 .gameboard div:hover {
-  filter: brightness(120%);
+  filter: brightness(75%);
+}
+
+.gameboard div:active {
+  filter: brightness(50%);
 }
 
 /* Active color, this is for when the computer shows the pattern */
