--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,35 @@ h1 {
   filter: grayscale(100%);
   cursor: default;
 }
+
+/* Game Over */
+.gameover {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  color: red;
+  font-size: 150px;
+  text-transform: uppercase;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  text-align: center;
+  background: rgb(0 0 0 / 70%);
+  opacity: 0;
+}
+
+.gameover-anim {
+  animation: gameover 0.5s ease forwards;
+}
+
+@keyframes gameover {
+  to {
+    opacity: 1;
+  }
+  from {
+    opacity: 0;
+  }
+}
